CoreApp/force-app/main/default/objects/POC_Employee__c/fields/Higher_Date__c.field-meta.xml
<CustomField>
    <fullName>Higher_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Higher Date</label>
    <type>Date</type>
</CustomField>