CoreApp/force-app/main/default/objects/POC_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Id__c</columns>
    <columns>Higher_Date__c</columns>
    <columns>Employee_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>